--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 18px 0 20px;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
