--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,27 +10,6 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1140px) {
-    .header {
-        padding-right: 30px;
-        padding-left: 30px;
-    }
-}
-
-@media screen and (max-width: 880px) {
-    .header {
-        padding-right: 30px;
-        padding-left: 30px;
-    }
-}
-
-@media screen and (max-width: 568px) {
-    .header {
-        padding-right: 14px;
-        padding-left: 14px;
-    }
-}
-
 .header__logo {
     height: 38px;
     width: 38px;
@@ -45,7 +24,7 @@
     color: #ffffff;
     list-style: none;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 16px;
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -57,7 +36,7 @@
     height: 32px;
     font-family: inherit;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 16px;
     border: 0;
     border-radius: 3px;
     margin: 0 0 0 30px;
@@ -71,5 +50,30 @@
     opacity: .6;
 }
 
+@media screen and (max-width: 1140px) {
+    .header {
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+}
 
+@media screen and (max-width: 568px) {
+    .header {
+        padding-right: 14px;
+        padding-left: 14px;
+    }
 
+    .header__navigation-item {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 16px;
+    }
+
+    .header__auth-button {
+        width: 54px;
+        height: 26px;
+        margin-left: 14px;
+        font-size: 10px;
+        line-height: 16px;
+    }
+}
