--- a/src/blocs/content/content.css
+++ b/src/blocs/content/content.css
@@ -11,6 +11,22 @@
     background-color: rgba(39, 39, 39, 1);
 }
 
+.content__section {
+    display: flex;
+    flex-direction: column;
+}
+
+.content__heading {
+    border-bottom: 1px solid rgba(218, 218, 218, 1);
+    margin: 0 0 70px;
+    padding: 110px 0 23px;
+    box-sizing: border-box;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: -0.04em;
+    font-weight: 400;
+}
+
 @media screen and (max-width: 1140px) {
     .content {
         padding-right: 30px;
@@ -18,9 +34,21 @@
     }
 }
 
+@media screen and (max-width: 690px) {
+    .content__heading {
+        margin-bottom: 60px;
+    }
+}
+
 @media screen and (max-width: 568px) {
     .content {
         padding-right: 14px;
         padding-left: 14px;
+    }
+
+    .content__heading {
+        font-size: 18px;
+        line-height: 22px;
+        padding-bottom: 28px;
     }
 }
