--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,17 +1,5 @@
 .about-project {
-    display: flex;
-    flex-direction: column;
-}
 
-.about-project__heading {
-    border-bottom: 1px solid rgba(218, 218, 218, 1);
-    margin: 0 0 70px;
-    padding: 110px 0 23px;
-    box-sizing: border-box;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: -0.04em;
-    font-weight: 400;
 }
 
 .about-project__columns {
@@ -59,6 +47,10 @@
     text-align: center;
 }
 
+.about-project__item_type_grey {
+    color: rgba(139, 139, 139, 1);
+}
+
 .about-project__item_type_bright {
     background-color: rgba(61, 220, 132, 1);
     color: #000;
@@ -75,10 +67,6 @@
 }
 
 @media screen and (max-width: 690px) {
-    .about-project__heading {
-        margin-bottom: 60px;
-    }
-
     .about-project__columns {
         grid-template-columns: repeat(1, minmax(268px, 614px));
         grid-template-rows: max-content;
