--- a/src/blocs/content/content.css
+++ b/src/blocs/content/content.css
@@ -27,6 +27,29 @@
     font-weight: 400;
 }
 
+.content__links {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.content__link {
+    list-style: none;
+    margin: 0 20px 0 0;
+}
+
+.content__link:last-of-type {
+    margin-right: 0;
+}
+
+.content__link-item {
+    font-size: 14px;
+    line-height: 17px;
+    color: #ffffff;
+    padding: 0;
+    text-decoration: none;
+}
+
 @media screen and (max-width: 1140px) {
     .content {
         padding-right: 30px;
