--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 .page {
-  background-color: #272727;
+  background-color: rgba(32, 32, 32, 1);
   color: #fff;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
