--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,5 +1,5 @@
 .form {
-    width: 100%;
+    max-width: 100%;
     font-family: 'Inter', Arial, sans-serif;
     padding: 0 0 13px 0;
     border-bottom: 1px solid rgba(66, 66, 66, 1);
@@ -24,8 +24,9 @@
 }
 
 .form__submit-btn {
-    width: 80px;
+    min-width: 80px;
     height: 34px;
+    box-sizing: border-box;
     border: 0;
     border-radius: 48px;
     background-color: rgba(66, 133, 244, 1);
@@ -34,6 +35,13 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     margin: 0;
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity .3s ease;
+}
+
+.form__submit-btn:hover {
+    opacity: .8;
 }
 
 @media screen and (max-width: 568px) {
@@ -44,5 +52,7 @@
     .form__text {
         font-size: 18px;
         line-height: 22px;
+        flex-basis: auto;
+        max-width: 212px;
     }
 }
