--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,20 +1,20 @@
 .register {
     display: flex;
     flex-direction: column;
-    margin: 232px auto;
+    margin: 70px auto;
 }
 
-.register__logo {
+.form__logo {
     width: 38px;
     height: 38px;
 }
 
-.register__greeting {
+.form__greeting {
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
     padding: 0;
-    margin: 40px 0 30px;
+    margin: 40px 0 20px;
 }
 
 .form {
@@ -63,20 +63,20 @@
     margin: 69px 0 16px;
 }
 
-.register__signin {
+.form__signin {
     display: flex;
     justify-content: center;
-    margin: 16px 0 232px;
+    margin: 16px 0 70px;
 }
 
-.register__text {
+.form__signin-text {
     color: rgba(139, 139, 139, 1);
     font-size: 14px;
     line-height: 17px;
     margin: 0 6px 0 0;
 }
 
-.register__text_link{
+.form__signin-text_link{
     color: rgba(66, 133, 244, 1);
     margin-right: 0;
     text-decoration: none;
@@ -85,6 +85,60 @@
     transition: opacity .3s ease;
 }
 
-.register__text_link:hover {
+.form__signin-text_link:hover {
     opacity: .8;
+}
+
+@media screen and (max-width: 880px) {
+    .register {
+        margin-top: 232px;
+        margin-bottom: 0;
+    }
+
+    .form__signin {
+        margin-bottom: 232px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .register {
+        margin-top: 56px;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+
+    .form__logo {
+        align-self: center;
+    }
+
+    .form__greeting {
+        margin-top: 50px;
+        margin-bottom: 60px;
+        align-self: center;
+    }
+
+    .form {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form__text {
+        width: 260px;
+    }
+
+    .form__button {
+        width: 260px;
+        margin-top: 157px;
+        margin-bottom: 14px;
+    }
+
+    .form__signin {
+        margin-bottom: 30px;
+    }
+
+    .form__signin-text {
+        font-size: 12px;
+        line-height: 15px;
+        margin-right: 7px;
+    }
 }
