--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 70px 0 0 0;
+    color: #ffffff;
 }
 
 .search-form__text {
