добавлен вывод ошибки при неправильной регистрации

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -63,6 +63,10 @@
     margin: 69px 0 16px;
 }
 
+.form__button:disabled {
+    background-color: gray;
+}
+
 .form__signin {
     display: flex;
     justify-content: center;
