--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -19,12 +19,20 @@
     justify-content: space-between;
     padding: 0 16px;
     box-sizing: border-box;
+    margin: 9px 0 17px;
+    cursor: pointer;
+}
+
+.movies-card__caption:hover .movies-card__delete-icon {
+    visibility: visible;
 }
 
 .movies-card__title {
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 .movies-card__like-icon {
@@ -39,6 +47,9 @@
 
 .movies-card__delete-icon {
     background-image: url("../../images/delete-icon.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    visibility: hidden;
 }
 
 .movies-card__duration {
