--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -86,6 +86,10 @@
 }
 
 @media screen and (max-width: 880px) {
+    .header__navigation {
+        display: none;
+    }
+
     .header__navigation_type_hyde {
         display: none;
     }
